--- a/goal.html
+++ b/goal.html
@@ -41,8 +41,7 @@
     <header id="header" class="header fixed-top d-flex align-items-center">
         <div class="d-flex align-items-center justify-content-between">
           <a href="goal.html" class="logo d-flex align-items-center">
-            <img src="assets/img/logo.png" alt="" />
-            <span class="d-none d-lg-block">Saitama</span>
+            <img src="assets/img/SAITAMA Combined Logo FINAL.jpg" alt="" />
           </a>
           <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
